# rife-ncnn-android

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh
